@@ -87,7 +87,7 @@ skillrange_from_weapon: 14
 skill_caster_check: yes
 
 // Should ground placed skills be removed as soon as the caster dies? [Note 4]
-clear_skills_on_death: 15
+clear_skills_on_death: 0
 
 // Should ground placed skills be removed when the caster changes maps? [Note 4]
 clear_skills_on_warp: 15
